--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -266,16 +266,18 @@ crossorigin=""/>
 
         <ol class="ingredientnat" type="A">
           <h2 class="maskedtitle">
-          <li class="catégories">
-            <span lang="fr">Les huiles essentielles :</span>
-            <span lang="en">Essential oils :</span>
-          </li>
-        </h2>
+            <li class="catégories">
+              <span lang="fr">Les huiles essentielles :</span>
+              <span lang="en">Essential oils :</span>
+            </li>
+          </h2>
             <ol>
-              <li class="catégories2">
-                <span lang="fr">Les distillations :</span>
-                <span lang="en">Steam distillation :</span>
-              </li>
+              <h3 class="maskedtitle">
+                <li class="catégories2">
+                  <span lang="fr">Les distillations classiques :</span>
+                  <span lang="en">Steam distillation :</span>
+                </li>
+              </h3>
                 <span lang="fr">Obtenues par entrainement à la vapeur d’eau des composés odorants de la plante. La vapeur d’eau possède effectivement la faculté de se mélanger aux composés odorants, pour s’en séparer par décantation à l’état liquide après condensation des vapeurs.</span>
                 <span lang="en">Obtained by hydrodistillation of the plant's odorous compounds. Steam has the ability to mix with the odorous compounds, to be separated from them by decantation in a liquid state, after condensation of the vapours.</span>
                 <p class="exemple mt-2 mb-0">
@@ -291,10 +293,12 @@ crossorigin=""/>
                     src="../img/matieres_premieres/Noix de Muscade HE.jpg" alt="Nutmeg EO - Noix de Muscade HE (N°Cas : 84082-68-8)" title="Nutmeg EO - Noix de Muscade HE (N°Cas : 84082-68-8)">
                   </div>
                 </p>
-              <li class="catégories2">
-                <span lang="fr">Les distillations sèches : </span>
-                <span lang="en">Dry distillation :</span>
-              </li>
+              <h3 class="maskedtitle">
+                <li class="catégories2">
+                  <span lang="fr">Les distillations sèches : </span>
+                  <span lang="en">Dry distillation :</span>
+                </li>
+              </h3>
                 <span lang="fr">Pour le <a class="interpop" href="../ingredients/Cade_EO__Cade_HE.html" target="_blank"> Cade HE </a> (un conifère) et le <a class="interpop" href="../ingredients/Birch_Rectified_EO__Bouleau_Rectifié_HE.html" target="_blank"> Bouleau Rectifié HE </a> (un bois), l’huile essentielle est obtenue par distillation sèche. Cela consiste en une pyrogénation du bois sous une très forte température (800°C environ) dans un four, puis une distillation du goudron récupéré, pour n’obtenir que les composés odorants issus de ce procédé.</span>
                 <span lang="en">For <a class="interpop" href="../ingredients/Cade_EO__Cade_HE.html" target="_blank">Cade EO</a> (a conifer) and <a class="interpop" href="../ingredients/Birch_Rectified_EO__Bouleau_Rectifié_HE.html" target="_blank">Birch EO</a> (a wood), the essential oil is obtained by dry distillation. This consists in a pyrogenation of the wood under a very high temperature (about 800°C) in an oven, followed by a distillation of the tar recovered, to obtain only the odorous compounds resulting from this process.</span>
                   <p class="exemple mt-2 mb-0">
@@ -307,10 +311,12 @@ crossorigin=""/>
                       src="../img/matieres_premieres/Bouleau Rectifié HE.jpg" alt="Birch Rectified EO - Bouleau Rectifié HE (N°Cas : 84012-15-7)" title="Birch Rectified EO - Bouleau Rectifié HE (N°Cas : 84012-15-7)">
                     </div>
                   </p>
-              <li class="catégories2">
-                <span lang="fr">Les expressions :</span>
-                <span lang="en">Cold pression :</span>
-              </li>
+              <h3 class="maskedtitle">
+                <li class="catégories2">
+                  <span lang="fr">Les expressions :</span>
+                  <span lang="en">Cold pression :</span>
+                </li>
+              </h3>
                 <span lang="fr">Pour les agrumes, leur huile essentielle est obtenue par expression à froid : le zeste est exprimé, puis l’huile est séparée de l’eau résultante par centrifugation.</span>
                 <span lang="en">For citrus fruits, the essential oil is obtained by cold pression: the peel is expressed, then the oil is separated from the resulting water by centrifugation.</span>
                 <p class="exemple mt-2 mb-0">
@@ -328,15 +334,19 @@ crossorigin=""/>
                 </p>
 
             </ol>
-          <li class="catégories">
-            <span lang="fr">Les concrètes, absolues et résinoïdes: </span>
-            <span lang="en">Concretes, absolutes and resinoids :</span>
-          </li>
-            <ol>
-              <li class="catégories2">
-                <span lang="fr">Les concrêtes et les absolues :</span>
-                <span lang="en">Concretes and absolutes:</span>
+            <h2 class="maskedtitle">
+              <li class="catégories">
+                <span lang="fr">Les concrètes, absolues et résinoïdes: </span>
+                <span lang="en">Concretes, absolutes and resinoids :</span>
               </li>
+            </h2>
+            <ol>
+              <h3 class="maskedtitle">
+                <li class="catégories2">
+                  <span lang="fr">Les concrêtes et les absolues :</span>
+                  <span lang="en">Concretes and absolutes:</span>
+                </li>
+              </h3>
                 <span lang="fr">Les <b>concrêtes</b> résultent de l’extraction d’une <b class="bplus">plante fraiche</b>. Il peut s’agir d’une fleur (<a class="interpop" href="../ingredients/Rose_de_Mai_Absolute__Rose_de_Mai_Absolue.html" target="_blank">Rose de Mai Absolue</a>), d’une fève (<a class="interpop" href="../ingredients/Tonka_Bean_Absolute__Fève_Tonka_Absolue.html" target="_blank">Fève Tonka Absolue</a>), d’une graine (<a class="interpop" href="../ingredients/Fenugreek_Absolute__Fenugrec_Absolue.html" target="_blank">Fenugrec Absolue</a>)… Cette extraction se déroule en plusieurs étapes. 
                 <br>La première consiste à plonger le végétal dans un solvant organique tel que l’hexane ou l’éther de pétrole. Après cette extraction pouvant durer plusieurs heures, les plantes sont retirées du solvant (on dit alors qu’elles sont « <u>épuisées</u> »). Nous obtenons un mélange solvant/matières odorantes qui, après évaporation du solvant, laisse place à une <b class="bplus">concrète</b>. C’est une pâte, car elle comprend les cires de la plante, qui ont aussi été extraites par le solvant utilisé. 
                 <br>Pour rendre la concrète utilisable en parfumerie, il faut la <u>diluer dans l’alcool</u> afin de la solubiliser, puis refroidir le mélange pour forcer la précipitation des cires. Après une étape de filtration et une nouvelle évaporation du solvant (l'alcool cette fois), le produit obtenu est liquide, parfois visqueux, et limpide : c’est l’<b class="bplus">absolue</b>.
@@ -358,11 +368,12 @@ crossorigin=""/>
                       src="../img/matieres_premieres/Fenugrec Absolue.jpg" alt="Fenugreek Absolute - Fenugrec Absolue (N°Cas : 68990-15-8)" title="Fenugreek Absolute - Fenugrec Absolue (N°Cas : 68990-15-8)">
                     </div>
                 </p>
-
-              <li class="catégories2" >
-                <span lang="fr">Les résinoïdes :</span>
-                <span lang="en">Resinoids :</span>
-              </li>
+              <h3 class="maskedtitle">
+                <li class="catégories2" >
+                  <span lang="fr">Les résinoïdes :</span>
+                  <span lang="en">Resinoids :</span>
+                </li>
+              </h3>
                 <span lang="fr">Les résinoïdes résultent de l’extraction d’un <b class="bplus">produit sec</b>. Il s’agit souvent de résines d’arbres (<a class="interpop" href="../ingredients/Siam_Benzoin_Resinoid__Benjoin_Siam_Résinoïde.html" target="_blank">Benjoin Siam Résinoïde</a>). Leur extraction consiste à solubiliser les composés odorants de la résine dans de l’alcool, de refroidir le mélange pour précipiter les cires, puis de filtrer et d’évaporer le solvant. Le produit obtenu est liquide, parfois très visqueux. Ces résines sont souvent aussi extractibles à la vapeur d’eau, pour obtenir une huile essentielle (<a class="interpop" href="../ingredients/Frankincense_EO__Encens_HE.html" target="_blank">Encens HE</a>).</span>
                 <span lang="en">Resinoids result from the extraction of a <b class="bplus">dry product</b>. They are often tree resins (<a class="interpop" href="../ingredients/Siam_Benzoin_Resinoid__Benjoin_Siam_Résinoïde.html" target="_blank">Siam Benzoin Resinoid</a>). Their extraction consists in solubilizing the resin's odorous compounds in alcohol, cooling the mixture to precipitate the waxes, then filtering and evaporating the solvent. The product obtained is liquid, sometimes highly viscous. These resins are often also extractable by steam distillation, to obtain an essential oil (<a class="interpop" href="../ingredients/Frankincense_EO__Encens_HE.html" target="_blank">Frankincense EO</a>).</span>
                 <p class="exemple mt-2 mb-0">
@@ -373,11 +384,13 @@ crossorigin=""/>
                       src="../img/matieres_premieres/Encens HE.jpg" alt="Frankincense EO - Encens HE (N°Cas : 8016-36-2)" title="Frankincense EO - Encens HE (N°Cas : 8016-36-2)">
                     </div>
                 </p>
-            </ol>  
-          <li class="catégories">
-            <span lang="fr">Les extraits CO<sub>2</sub> supercritique : </span>
-            <span lang="en">Supercritical CO<sub>2</sub> extracts : </span>
-          </li>
+            </ol>
+          <h2 class="maskedtitle"> 
+            <li class="catégories">
+              <span lang="fr">Les extraits CO<sub>2</sub> supercritique : </span>
+              <span lang="en">Supercritical CO<sub>2</sub> extracts : </span>
+            </li>
+          </h2>
             <span lang="fr">Ces ingrédients résultent de la mise en contact d’un végétal quelconque (il peut même s’agir de certains fruits, habituellement non extraits) avec du dioxyde de carbone à plus de 31°C et sous 74 bar de pression. Mettre le CO<sub>2</sub> sous cette forme est coûteux, mais ce type d’extraction fournit un résultat olfactif sans égal, et offre à la palette du parfumeur des extraits d’une grande qualité.</span>
             <span lang="en">These ingredients result from the contact of any plant (it can even be some fruits, usually not extracted) with carbon dioxide at over 31°C and 74 bar of pressure. Putting CO<sub>2</sub> in this form is expensive, but this type of extraction provides an awesome olfactory result, and offers to the perfumer's palette high quality extracts</span>    
         </ol>
