--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -414,9 +414,12 @@ crossorigin=""/>
         <br>Natural ingredients are olfactively very complex, given the diversity of molecules they contain. They do not make creation any easier. Moreover, although they bring beauty to a creation, they also bring instability to it, always taking into account the diversity of molecules that may be present. Eventually, the cost of obtaining them is not negligible. This parameter was also upset by the arrival of organic synthesis at the end of the 19th century...</span>
       </p> 
     <p>
-      <li>
-          <span class="titreMP" lang="fr">LES INGREDIENTS SYNTHETIQUES:</span>
-          <span class="titreMP" lang="en">SYNTHETIC INGREDIENTS:</span>
+      <h2 class="maskedtitle"> 
+        <li>
+            <span class="titreMP" lang="fr">LES INGREDIENTS SYNTHETIQUES:</span>
+            <span class="titreMP" lang="en">SYNTHETIC INGREDIENTS:</span>
+        </li>
+      </h2>
         <p class="mt-2 mb-2">
           <span lang="fr">Ces ingrédients sont issus de procédés de synthèse, c’est-à-dire de <b>réactions successives entre plusieurs molécules</b>. Souvent, de petites molécules sont utilisées comme point de départ, pour en fabriquer de plus grandes, en les assemblant. De grandes molécules bon marché peuvent aussi être utilisées pour en modifier la structure, et les propriétés olfactives. Il existe une infinité de réactions possibles, pour une infinité de molécules. Or, seules quelques-unes d’entre elles forment <b>les deux tiers de la palette du parfumeur</b>.
           <br>Il est aussi possible d’<u>obtenir des molécules par voie naturelle</u>, en les extirpant d’extraits de plantes diverses. Certaines molécules sont en effet souvent plus faciles d’obtention par voie naturelle, car elles sont abondantes dans un extrait végétal bon marché (exemple du <a class="interpop" href="../ingredients/Alpha-Pinene__Pinène-Alpha.html" target="_blank">Pinène-Alpha</a>, présent dans la <a class="interpop" href="../ingredients/Turpentine_EO__Térébenthine_HE.html" target="_blank">Térébenthine HE</a>). D’autres conviennent pour une formulation dite « 100% naturelle » : plusieurs créateurs y sont spécialisés et souhaitent formuler leurs parfums en utilisant exclusivement des ingrédients d’origine naturelle. Les molécules issues du naturel atteignent rarement une pureté absolue, ce qui leur confère une complexité olfactive intéressante (exemple du <a class="interpop" href="../ingredients/Geraniol__Géraniol.html" target="_blank">Géraniol</a> ou du <a class="interpop" href="../ingredients/Linalool__Linalol.html" target="_blank">Linalol</a> naturels), dépendant de la plante dont ils sont extraits. Enfin, des extraits végétaux peuvent subir une réaction, par administration d’une molécule tel que l’anhydride acétique. C’est le cas de l’<a class="interpop" href="../ingredients/Gaiyl_Acetate__Acétate_de_Gaiyle.html" target="_blank">Acétate de Gaiyle</a> ou l’<a class="interpop" href="../ingredients/Vetiveryl_Acetate__Acétate_de_Vétiveryle.html" target="_blank">Acétate de Vétivéryl</a>.</span>
@@ -424,12 +427,14 @@ crossorigin=""/>
           <span lang="en">These ingredients are the result of synthesis processes, meaning successive reactions between several molecules. Small molecules are often used as a starting point, to make larger ones by assembling them. Large and cheap molecules can also be used to modify their structure and olfactory properties. There is an infinite number of possible reactions for an infinite number of molecules. But only a few of them make up around two-thirds of the perfumer's palette.
           <br>It is also possible to obtain molecules naturally, by extracting them from various plant extracts. Some molecules are often easier to obtain naturally, because they are abundant in a cheap plant extract (example of <a class="interpop" href="../ingredients/Alpha-Pinene__Pinène-Alpha.html" target="_blank">Alpha-Pinene</a>, present in <a class="interpop" href="../ingredients/Turpentine_EO__Térébenthine_HE.html" target="_blank">Turpentine EO</a>). Others are suitable for a so-called "100% natural" formulation: several creators are specialized in this and wish to formulate their fragrances using only ingredients of natural origin. Molecules of natural origin rarely reach absolute purity, which gives them an interesting olfactory complexity (example of natural <a class="interpop" href="../ingredients/Geraniol__Géraniol.html" target="_blank">Geraniol</a> or <a class="interpop" href="../ingredients/Linalool__Linalol.html" target="_blank">Linalool</a>), depending on the plant from which they are extracted. Finally, plant extracts can undergo a reaction by administration of a molecule such as acetic anhydride. This is the case of <a class="interpop" href="../ingredients/Gaiyl_Acetate__Acétate_de_Gaiyle.html" target="_blank">Gaiyl Acetate</a> or <a class="interpop" href="../ingredients/Vetiveryl_Acetate__Acétate_de_Vétiveryle.html" target="_blank">Vetiveryl Acetate</a>. </span>
         </p>
-      </li>
     </p>  
     <p>
-      <li>
-          <span class="titreMP" lang="fr">LES BASES:</span>
-          <span class="titreMP" lang="en">BASES:</span>
+      <h2 class="maskedtitle"> 
+        <li>
+            <span class="titreMP" lang="fr">LES BASES:</span>
+            <span class="titreMP" lang="en">BASES:</span>
+        </li>
+      </h2>
         <p class="mt-2 mb-2">
           <span lang="fr">Les bases sont des compositions parfumantes, reproduisant une odeur connue, mais souvent non extractible. Elles servent à diversifier la palette du parfumeur, en proposant un plus large choix de matières premières, et en imitant l’odeur d’ingrédients existant ou non, à moindre coût.</span>
           <span lang="en">The bases are perfume compositions, reproducing a known smell, but often not extractable. They make it possible to diversify the perfumer's palette by offering a wider choice of raw materials, and by imitating the smell of existing or non-existing ingredients, at a lower cost.</span>
@@ -438,65 +443,82 @@ crossorigin=""/>
           <span lang="en">We can distinguish several type of bases :</span>
 
           <ol style="font-size: 0.8em;" type="A">
-            <li class="catégories">
-              <span lang="fr">Les bases imitatrices : </span>
-              <span lang="en">Imitative bases : </span>
-            </li>
+            <h3 class="maskedtitle"> 
+              <li class="catégories">
+                <span lang="fr">Les bases imitatrices : </span>
+                <span lang="en">Imitative bases : </span>
+              </li>
+            </h3>
               <span lang="fr">Ces bases reproduisent l’odeur d’un extrait naturel, à un coût moindre, et avec une originalité olfactive. Bien souvent, il s’agit de bases internes aux sociétés de création, classées confidentielles. Elles sont créées par les parfumeurs, en utilisant des ingrédients naturels comme synthétiques. Elles sont créées comme des parfums.</span>
               <span lang="en">These bases reproduce the smell of a natural extract, at a lower cost, and with an olfactory originality. Very often, they are internal bases, exclusively used by some creative companies, and thus classified as confidential. They are created by perfumers, using both natural and synthetic ingredients. They are created like perfumes.</span>
-
-            <li class="catégories">
-              <span lang="fr">Les bases créatives : </span>
-              <span lang="en">Creatives bases : </span>
-            </li>
+            <h3 class="maskedtitle"> 
+              <li class="catégories">
+                <span lang="fr">Les bases créatives : </span>
+                <span lang="en">Creatives bases : </span>
+              </li>
+            </h3>
               <span lang="fr">Ce sont celles qui innovent. Elles ont pour objectif de représenter un thème olfactif ou l’odeur d’un produit de consommation, non extractible. La base <a class="interpop" href="../ingredients/Chocovan®__Chocovan®.html" target="_blank">Chocovan®</a>, la <a class="interpop" href="../ingredients/Cassis_Base_345_F®__Cassis_Base_345_F®.html" target="_blank">Cassis Base 345 F®</a> ou encore le <a class="interpop" href="../ingredients/Nectarol®__Nectarol®.html" target="_blank">Nectarol®</a> ont cette visée.</span>
               <span lang="en">These are the ones which innovate. They aim to represent an olfactory theme, or the smell of a consumer product, not extractable. <a class="interpop" href="../ingredients/Chocovan®__Chocovan®.html" target="_blank">Chocovan®</a>, <a class="interpop" href="../ingredients/Cassis_Base_345_F®__Cassis_Base_345_F®.html" target="_blank">Cassis Base 345 F®</a> or <a class="interpop" href="../ingredients/Nectarol®__Nectarol®.html" target="_blank">Nectarol®</a> have this aim.</span>
           </ol>
         </p>  
-      </li>
     </p>
 
     <p>
-      <li>
-          <span class="titreMP" lang="fr">LES CONTRAINTES D'UTILISATION:</span>
-          <span class="titreMP" lang="en">CONSTRAINTS OF USE:</span>
+      <h2 class="maskedtitle"> 
+        <li>
+            <span class="titreMP" lang="fr">LES CONTRAINTES D'UTILISATION:</span>
+            <span class="titreMP" lang="en">CONSTRAINTS OF USE:</span>
+        </li>
+      </h2>
         <p class="mt-2 mb-2">
           <span lang="fr">Chaque matière première peut faire partie de la palette du parfumeur, constituée généralement de 200 à 1500 matières premières. Le créateur connait toutes les matières premières de sa palette, et sait les utiliser à bon escient. Leur utilisation est en effet régulée par plusieurs paramètres : </span>
           <span lang="en">Each raw material can be part of the perfumer's palette, generally containing 200 to 1500 raw materials. The perfumer knows all its raw materials, and knows how to use them properly. Their use is in fact regulated by several parameters:</span>
           <ol style="font-size: 0.8em;" type="A">
-              <li class="catégories">
-                <span lang="fr">La réglementation : </span>
-                <span lang="en">Regulation : </span>
-              </li>
+              <h3 class="maskedtitle">
+                <li class="catégories">
+                  <span lang="fr">La réglementation : </span>
+                  <span lang="en">Regulation : </span>
+                </li>
+              </h3>
                 <ol>
-                  <li class="catégories2">
-                    <span>IFRA : </span>
-                  </li>
+                  <h4 class="maskedtitle">
+                    <li class="catégories2">
+                      <span>IFRA : </span>
+                    </li>
+                  </h4>
                     <span lang="fr">L’IFRA est l’association agissant notamment pour la réglementation des matières premières présentant un danger et possède une grande influence sur la restriction de l’utilisation de certains ingrédients.</span>
                     <span lang="en">The IFRA is the association acting in particular for the regulation of hazardous raw materials. It has a great influence on the restriction of use of certain ingredients. Its goal is to guide raw materials usage, after safety and toxicology studies. Thus, a formula that complies with IFRA standards is known as safe to use.</span>
-                  <li class="catégories2">
-                    <span lang="fr">Les allergènes : </span> 
-                    <span lang="en">Allergens : </span>  
-                  </li>
+                  <h4 class="maskedtitle">
+                    <li class="catégories2">
+                      <span lang="fr">Les allergènes : </span> 
+                      <span lang="en">Allergens : </span>  
+                    </li>
+                  </h4>
                     <span lang="fr">L’Union Européenne compte 26 molécules et extraits allergènes. Leur utilisation ne doit pas dépasser 100 ppm (0,01%) dans un produit fini rincé, et 10 ppm (0,001%) dans un produit fini non-rincé. Dans le cas d’une surutilisation, le nom de ces ingrédients doit figurer sur l’étiquette du produit concerné. Néanmoins, très peu de consommateurs sont allergiques aux produits parfumés. Pour en savoir plus, rendez-vous sur notre <a href="../allergenes.html" target="_BLANK">article sur le sujet</a>.</span>
                     <span lang="en">There are 26 allergenic molecules and extracts in the European Union. Their use must not exceed 100 ppm (0.01%) in rinsed products and 10 ppm (0.001%) in non-rinsed products. In the case of overuse, the name of these ingredients must appear on the label of the concerned product. Nevertheless, very few consumers are allergic to perfumed products. Read more in our <a href="../allergenes.html" target="_BLANK"> article about this topic</a>.</span>
-                </ol>   
-              <li class="catégories">
-                <span lang="fr">La stabilité : </span>
-                <span lang="en">Stability : </span> 
-              </li>
+                </ol>
+                <h3 class="maskedtitle">   
+                  <li class="catégories">
+                    <span lang="fr">La stabilité : </span>
+                    <span lang="en">Stability : </span> 
+                  </li>
+                </h3>
                 <span lang="fr">Les matières premières naturelles sont souvent instables, et certaines molécules sont parfois très réactives.</span>
                 <span lang="en">Natural raw materials are often unstable, and some molecules are sometimes very reactive.</span>
-              <li  class="catégories">
-                <span lang="fr">Le coût : </span>
-                <span lang="en">Cost : </span>
-              </li>
+              <h3 class="maskedtitle">
+                <li  class="catégories">
+                  <span lang="fr">Le coût : </span>
+                  <span lang="en">Cost : </span>
+                </li>
+              </h3>
                 <span lang="fr">Certains ingrédients sont difficiles à obtenir, car leur préparation peut être longue, demander une main d’œuvre, des molécules ou des procédés coûteux, ne permettre de les obtenir qu’avec un faible rendement…</span>
                 <span lang="en">Some ingredients are difficult to obtain because their preparation can be time-consuming, require labour, expensive molecules or processes, or can only be obtained with a low yield...</span>
-              <li class="catégories">
-                <span lang="fr">Les demandes et contraintes clients : </span>
-                <span lang="en">Client’s demand and constraint : </span>
-              </li>
+              <h3 class="maskedtitle">
+                <li class="catégories">
+                  <span lang="fr">Les demandes et contraintes clients : </span>
+                  <span lang="en">Client’s demand and constraint : </span>
+                </li>
+              </h3>
                 <span lang="fr">Certaines demandes de création peuvent imposer par exemple de formuler exclusivement avec des matières premières naturelles, sans allergène, à bas coût de production, avec une certaine ténacité du parfum, avec certaines matières premières définies…</span>
                 <span lang="en">Some creation requests may require, for example, to formulate exclusively with natural raw materials, without allergens, with low production costs, with a certain tenacity of the perfume, with certain defined raw materials...</span>
           </ol>
