--- a/html/_/index.html
+++ b/html/_/index.html
@@ -605,7 +605,7 @@ crossorigin=""/>
                       <span id="modalbody-commentifra" class="textitem"></span>
                     </div><!--Fermeture blockifra49-->
 
-                    <div class="blocktable49">
+                    <div class="blocktable49" style="background-color: blue;">
                       <div class="table-responsive text-center">
                             <table class="table149">
                               <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
@@ -658,6 +658,7 @@ crossorigin=""/>
                             </table>
                       </div>
                       </div> <!--Ici on ferme blocktable-->
+
                       <h2 class="annexe49 d-inline text-size-14px">
                         <span>
                           <b lang="fr">Annexe I : <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
