--- a/html/_/index.html
+++ b/html/_/index.html
@@ -605,8 +605,8 @@ crossorigin=""/>
                       <span id="modalbody-commentifra" class="textitem"></span>
                     </div><!--Fermeture blockifra49-->
 
-                    <div class="blocktable49" style="background-color: blue;">
-                      <div class="table-responsive text-center">
+                    <div class="blocktable49">
+                      <div class="table-responsive text-center mb-2">
                             <table class="table149">
                               <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
                               <!-- EN-TETE DU TABLEAU-->
@@ -657,16 +657,22 @@ crossorigin=""/>
                               </tr>
                             </table>
                       </div>
-                      </div> <!--Ici on ferme blocktable-->
-
-                      <h2 class="annexe49 d-inline text-size-14px">
+                      <p>
+                      <h2 class="annexeI49 d-inline text-size-14px">
                         <span>
                           <b lang="fr">Annexe I : <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
                           <b lang="en">Annexe I : <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
                         </span>
                       </h2>
-                      
                       <br>
+                        <table class="table149">
+                          <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption>
+                        </table>
+                      </p>
+                      
+                    </div> <!--Ici on ferme blocktable-->
+
+
                       <div><!--paragraphe de responsabilité -->
                       <p class="logoifra text-size-11px text-center text-my-grey"><span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span><span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span></p>
                       <!--Lien vers le site de l'IFRA-->
