--- a/html/_/index.html
+++ b/html/_/index.html
@@ -667,9 +667,28 @@ crossorigin=""/>
                       <br>
                         <table class="table149">
                           <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption>
+                          <!-- EN-TETE DU TABLEAU-->
+                              <tr>
+                                <th rowspan="4">
+                                  <span lang="fr">Liste des ingrédients contenants </span>
+                                  <span lang="en">Ingredients containing </span>
+                                </th>
+                              </tr>
+                              <tr>
+                                <th>Ingredient Name</th>
+                                <th>Botanical Name</th>
+                                <th>CAS N°</th>
+                                <th>Estimated Concentration</th>
+                              </tr>
+                              <tr>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                              </tr>
                         </table>
                       </p>
-                      
+
                     </div> <!--Ici on ferme blocktable-->
 
 
