--- a/html/_/index.html
+++ b/html/_/index.html
@@ -668,24 +668,28 @@ crossorigin=""/>
                         <table class="tableannexeI">
                           <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption>
                           <!-- EN-TETE DU TABLEAU-->
-                              <tr>
-                                <th rowspan="4">
-                                  <span lang="fr">Liste des ingrédients contenants </span>
-                                  <span lang="en">Ingredients containing </span>
-                                </th>
-                              </tr>
-                              <tr>
-                                <th>Ingredient Name</th>
-                                <th>Botanical Name</th>
-                                <th>CAS N°</th>
-                                <th>Estimated Concentration</th>
-                              </tr>
-                              <tr>
-                                <th></th>
-                                <th></th>
-                                <th></th>
-                                <th></th>
-                              </tr>
+                              <thead>
+                                <tr>
+                                  <th rowspan="4">
+                                    <span lang="fr">Liste des ingrédients contenants </span>
+                                    <span lang="en">Ingredients containing </span>
+                                  </th>
+                                </tr>
+                                <tr>
+                                  <td>Ingredient Name</td>
+                                  <td>Botanical Name</td>
+                                  <td>CAS N°</td>
+                                  <td>Estimated Concentration</td>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                </tr>
+                              </tbody>
                         </table>
                       </p>
 
