--- a/html/_/index.html
+++ b/html/_/index.html
@@ -670,18 +670,18 @@ crossorigin=""/>
                           <!-- EN-TETE DU TABLEAU-->
                               <thead>
                                 <tr>
-                                  <th rowspan="4">
+                                  <th colspan="4">
                                     <span lang="fr">Liste des ingrédients contenants </span>
                                     <span lang="en">Ingredients containing </span>
                                   </th>
                                 </tr>
+                              </thead>
                                 <tr>
                                   <td>Ingredient Name</td>
                                   <td>Botanical Name</td>
                                   <td>CAS N°</td>
                                   <td>Estimated Concentration</td>
                                 </tr>
-                              </thead>
                               <tbody>
                                 <tr>
                                   <td></td>
