--- a/html/_/index.html
+++ b/html/_/index.html
@@ -577,6 +577,40 @@ crossorigin=""/>
                   <div class="col-12">
                     <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires-->
                     <div class="blockifra49 mt-3">
+
+                      <p>
+                      <h2 class="annexeI49B d-inline text-size-14px">
+                        <span>
+                          <b lang="fr">Annexe I <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
+                          <b lang="en">Annexe I <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
+                        </span>
+                      </h2>
+                      <br>
+                        <table class="tableannexeI">
+                          <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption>
+                          <!-- EN-TETE DU TABLEAU-->
+                              <thead>
+                                <tr>
+                                  <th colspan="3">
+                                    <span lang="fr">Liste des ingrédients contenants </span>
+                                    <span lang="en">Ingredients containing </span>
+                                  </th>
+                                </tr>
+                              </thead>
+                                <tr>
+                                  <td>Ingredient Name</td>
+                                  <td>CAS N°</td>
+                                  <td>Estimated Concentration</td>
+                                </tr>
+                              <tbody>
+                                <tr>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                </tr>
+                              </tbody>
+                        </table>
+                      </p>
                     <!--Type de restriction-->
                       <h2 class="amendment49 d-inline text-size-14px">
                         <span>
@@ -660,8 +694,8 @@ crossorigin=""/>
                       <p>
                       <h2 class="annexeI49 d-inline text-size-14px">
                         <span>
-                          <b lang="fr">Annexe I : <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
-                          <b lang="en">Annexe I : <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
+                          <b lang="fr">Annexe I <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
+                          <b lang="en">Annexe I <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
                         </span>
                       </h2>
                       <br>
@@ -692,9 +726,8 @@ crossorigin=""/>
                               </tbody>
                         </table>
                       </p>
-
                     </div> <!--Ici on ferme blocktable-->
-
+                    
 
                       <div><!--paragraphe de responsabilité -->
                       <p class="logoifra text-size-11px text-center text-my-grey"><span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span><span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span></p>
