--- a/html/_/index.html
+++ b/html/_/index.html
@@ -576,7 +576,7 @@ crossorigin=""/>
                 <div class="row">
                   <div class="col-12">
                     <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires-->
-                    <div class="blockifra49 mt-3" style="background-color: blue;">
+                    <div class="blockannexeI49 mt-3" style="background-color: blue;">
 
                       <p>
                       <h2 class="annexeI49B d-inline text-size-14px">
@@ -611,6 +611,8 @@ crossorigin=""/>
                               </tbody>
                         </table>
                       </p>
+                      </div><!--Fermeture blockannexeI49-->
+                      <div class="blockcategories49" style="background-color: yellow;">
                     <!--Type de restriction-->
                       <h2 class="amendment49 d-inline text-size-14px">
                         <span>
@@ -637,8 +639,7 @@ crossorigin=""/>
                         </span>  
                       </h2>
                       <span id="modalbody-commentifra" class="textitem"></span>
-                    </div><!--Fermeture blockifra49-->
-
+                    
                     <div class="blocktable49">
                       <div class="table-responsive text-center mb-2">
                             <table class="table149">
@@ -691,6 +692,7 @@ crossorigin=""/>
                               </tr>
                             </table>
                       </div>
+                    </div>
                       <p>
                       <h2 class="annexeI49 d-inline text-size-14px">
                         <span>
@@ -726,10 +728,10 @@ crossorigin=""/>
                               </tbody>
                         </table>
                       </p>
-                    </div> <!--Ici on ferme blocktable-->
+                    </div> <!--Ici on ferme blockcategories49-->
                     
 
-                      <div><!--paragraphe de responsabilité -->
+                      <div style="background-color:blue;"><!--paragraphe de responsabilité -->
                       <p class="logoifra text-size-11px text-center text-my-grey"><span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span><span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span></p>
                       <!--Lien vers le site de l'IFRA-->
                       <p class="logoifra text-size-11px" style="margin-bottom: 0;"><span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span><span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
