--- a/html/_/index.html
+++ b/html/_/index.html
@@ -449,7 +449,7 @@ crossorigin=""/>
                 <div class="row">
                   <div class="col-12">
 
-                    <div class="blockannexeI48 mt-3" style="background-color: blue;">
+                    <div class="blockannexeI48 mt-3">
 
                       <p>
                       <h2 class="annexeI49B d-inline text-size-14px">
@@ -631,7 +631,7 @@ crossorigin=""/>
                         </table>
                       </p>
                     </div>
-                    <div class="responsabilité" style="background-color: blue;">
+                    <div class="responsabilité">
                         <!--paragraphe de responsabilité -->
                         <p class="logoifra text-size-11px text-center text-my-grey"><span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span><span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span></p>
                         <!--Lien vers le site de l'IFRA-->
@@ -652,7 +652,7 @@ crossorigin=""/>
                 <div class="row">
                   <div class="col-12">
                     <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires-->
-                    <div class="blockannexeI49 mt-3" style="background-color: blue;">
+                    <div class="blockannexeI49 mt-3">
 
                       <p>
                       <h2 class="annexeI49B d-inline text-size-14px">
@@ -690,7 +690,7 @@ crossorigin=""/>
 
                     </div><!--Fermeture blockannexeI49-->
 
-                    <div class="blockcategories49" style="background-color: yellow;">
+                    <div class="blockcategories49">
                       <!--Type de restriction-->
                       <h2 class="amendment49 d-inline text-size-14px">
                         <span>
@@ -810,7 +810,7 @@ crossorigin=""/>
                     </div> <!--Ici on ferme blockcategories49-->
                     
 
-                      <div class="responsabilité" style="background-color:blue;"><!--paragraphe de responsabilité -->
+                      <div class="responsabilité"><!--paragraphe de responsabilité -->
                         <p class="logoifra text-size-11px text-center text-my-grey"><span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span><span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span></p>
                         <!--Lien vers le site de l'IFRA-->
                         <p class="logoifra text-size-11px" style="margin-bottom: 0;"><span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span><span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
