--- a/html/_/index.html
+++ b/html/_/index.html
@@ -791,7 +791,7 @@ crossorigin=""/>
                                   </th>
                                 </tr>
                               </thead>
-                                <tr>
+                                <tr style="background-color: blue;">
                                   <td>Ingredient Name</td>
                                   <td>Botanical Name</td>
                                   <td>CAS N°</td>
