--- a/html/_/index.html
+++ b/html/_/index.html
@@ -470,7 +470,7 @@ crossorigin=""/>
                                   </th>
                                 </tr>
                               </thead>
-                                <tr>
+                                <tr style="background-color: #FBE5D6FF; font-weight: bold;">
                                   <td>Ingredient Name</td>
                                   <td>CAS N°</td>
                                   <td>Estimated Concentration</td>
@@ -614,7 +614,7 @@ crossorigin=""/>
                                     </th>
                                   </tr>
                                 </thead>
-                                  <tr>
+                                  <tr style="background-color: #FBE5D6FF; font-weight: bold;">
                                     <td>Ingredient Name</td>
                                     <td>Botanical Name</td>
                                     <td>CAS N°</td>
@@ -673,7 +673,7 @@ crossorigin=""/>
                                   </th>
                                 </tr>
                               </thead>
-                                <tr>
+                               	<tr style="background-color: #FBE5D6FF; font-weight: bold;">
                                   <td>Ingredient Name</td>
                                   <td>CAS N°</td>
                                   <td>Estimated Concentration</td>
@@ -791,7 +791,7 @@ crossorigin=""/>
                                   </th>
                                 </tr>
                               </thead>
-                                <tr style="background-color: blue;">
+                                <tr style="background-color: #FBE5D6FF; font-weight: bold;">
                                   <td>Ingredient Name</td>
                                   <td>Botanical Name</td>
                                   <td>CAS N°</td>
