--- a/html/_/index.html
+++ b/html/_/index.html
@@ -746,7 +746,7 @@ crossorigin=""/>
                                   <td><span id="modalbody-cat5D"></span> %</td>
                                   <td><span id="modalbody-cat6"></span> %</td>
                                 </tr>
-                                <tr>
+                                <tr class="mt-2">
                                   <th>Cat.7A</th>
                                   <th>Cat.7B</th>
                                   <th>Cat.8</th>
